--- a/跨域问题及解决方案.md
+++ b/跨域问题及解决方案.md
@@ -28,4 +28,7 @@ cors通过响应的请求头和响应头来实现跨域资源访问。
 ![](https://raw.githubusercontent.com/Gloria1124/picgo/main/1611522107(1).png)  
 前端ajax部分如下：  
 ![](https://raw.githubusercontent.com/Gloria1124/picgo/main/1611522160(1).png)
-*若请求包含一些特殊的请求头（如cookie），需要在转发时特殊处理
+*若请求包含一些特殊的请求头（如cookie），需要在转发时特殊处理*   
+
+> 参考文章  
+[浏览器同源策略与ajax跨域方法汇总](https://www.jianshu.com/p/438183ddcea8)
