--- a/事件流及事件委托.md
+++ b/事件流及事件委托.md
@@ -12,3 +12,7 @@ netscape提出的事件流叫做事件捕获，即从根节点开始接收事件
 ### 阻止冒泡
 触发某个元素的事件后，事件就停留在该元素而不进行传播。  
 stopPropagation（）
+
+## 事件委托
+如果有多个以类似方式处理的元素，不必为每个元素分配一个处理程序，而是将单个处理程序放在他们的共同祖先上。
+
